--- a/src/NotifyFunction/NotifyFunction.csproj
+++ b/src/NotifyFunction/NotifyFunction.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Azure.Communication.Sms" Version="1.0.0-beta.2" />
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.14.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.10" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.0.0-beta.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.2" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.7" />
